--- a/Website/static/styles/global-style.css
+++ b/Website/static/styles/global-style.css
@@ -1,8 +1,12 @@
 /* Global Stylings */
-*{
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
+* {
     border: 0;
     padding: 0;
     margin: 0;
+    font-family: "Poppins", sans-serif;
 }
 
 html {
@@ -154,7 +158,7 @@ body {
     display: inline-block;
     text-align: center;
     top: 50px;
-    right: 35px;
+    right: 32px;
     position: absolute;
 }
 
@@ -162,6 +166,8 @@ body {
     color: white;
     background-color: transparent;
     text-decoration: underline;
+    font-size: 14px;
+    border: none;
 }
 
 .logout-button:hover {
