--- a/Website/static/styles/index-style.css
+++ b/Website/static/styles/index-style.css
@@ -4,14 +4,23 @@
         padding: 0;
         box-sizing: border-box;
         font-family: "Poppins", sans-serif;
+        max-width: 100%;
 }
 body{
         display: flex;
         align-items: center;
         justify-content: center;
-        min-height: 100vh;
+        /* min-height: 100vh; */
+        min-height: 100%;
         background: white;
 }
+
+.drag-area {
+    display: flex;
+    max-width: 100%;
+    margin-top: 125px;
+}
+
 .drag-area-photo{
         border: 2px dashed rgb(54, 85, 120);
         height: 500px;
@@ -131,6 +140,52 @@ body{
     top: 20px;
 }
 
+.top-border .rosen-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+
+.top-elements {
+    position: relative;
+    display: flex;
+}
+
+/* page title at the top */
+.title-label {
+    display: block;
+    position: absolute;
+    text-align: center;
+    right: 0px;
+    left: 0px;
+    font-size: 48px;
+    color: white;
+    top: 20px;
+}
+
+.logout {
+    display: inline-block;
+    text-align: center;
+    top: 70px;
+    right: 32px;
+    position: absolute;
+}
+
+.logout-button {
+    color: white;
+    background-color: transparent;
+    text-decoration: underline;
+    font-size: 14px;
+    border: none;
+}
+
+.logout-button:hover {
+    color: rgb(241, 241, 241);
+    cursor: pointer;
+}
+
 .run-button {
     background-color: rgb(54, 85, 120);
     color: white;
@@ -175,11 +230,4 @@ footer{
     font-family: Arial;
     font-size: 12px;
     font-weight: normal;
-}
-
-.top-border .rosen-logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 15px;
 }
