Fixed some formatting and buttons

--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -32,7 +32,7 @@
 
                 <div class="logout">
                     <a href=".">
-                        <button class="logout-button">
+                        <button class="logout-button" id="logout-button">
                             Logout
                         </button>
                     </a>
