--- a/Website/static/styles/global-style.css
+++ b/Website/static/styles/global-style.css
@@ -7,6 +7,7 @@
     padding: 0;
     margin: 0;
     font-family: "Poppins", sans-serif;
+    max-width: 100%;
 }
 
 html {
@@ -139,7 +140,8 @@ body {
 .homepage {
     display: inline-block;
     text-align: center;
-    right: 30px;
+    top: -4px;
+    right: 31px;
     position: absolute;
 }
 
@@ -157,7 +159,7 @@ body {
 .logout {
     display: inline-block;
     text-align: center;
-    top: 50px;
+    top: 46px;
     right: 32px;
     position: absolute;
 }
@@ -269,9 +271,9 @@ body {
     border: none;
     border-radius: 10px;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 22px;
     width: 150px;
-    height: 60px;
+    height: 55px;
 }
 
 /* Change colour when hovering over the Rerun Button */
@@ -393,7 +395,7 @@ body {
     color: rgb(54, 85, 120);
     position: relative;
     margin: 20px auto;
-    padding-bottom: 60px;
+    padding-bottom: 15px;
     font-size: 48px;
 }
 
@@ -445,10 +447,10 @@ input:-webkit-autofill::first-line {
     background-color: rgb(54, 85, 120);
     color: white;
     border: none;
-    border-radius: 15px;
+    border-radius: 10px;
     font-size: 18px;
     width: 140px;
-    height: 35px;
+    height: 45px;
 }
 
 /* Change colour when hovering over the Login Button */
