--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -1,79 +1,106 @@
 <!DOCTYPE html>
-      <html lang="en">
-      <head>
-                <title>Home</title>
-                <link rel="stylesheet" href="{{ url_for('static',filename='styles/index-style.css') }}">
-                
-      </head>
+<html lang="en">
+<head>
+          <title>Home</title>
+          <link rel="stylesheet" href="{{ url_for('static',filename='styles/index-style.css') }}">
+          
+</head>
 
-      <body>
-                <!--NavBar-->
-                <div class="top-border">
-                        <div class="top-elements">
-                                <div class="title-label">
-                                        <b>Upload Files<b>
-                                </div>
-
-
-                                <div class="logout">
-                                        <a href=".">
-                                        <button class="logout-button">
-                                                Logout
-                                        </button>
-                                        </a>
-                                </div>
+<body>
+          <!--NavBar-->
+          <div class="top-border">
+                  <div class="top-elements">
+                          <div class="title-label">
+                                  <b>Upload Files<b>
+                          </div>
 
 
-                                <div class="rosen">
-                                        <a href=index>
-                                        <img src="{{url_for('static', filename='images/2880px-Logo_ROSEN_Group_White.png')}}" id="logo" width="220px" height="63px">
-                                        </a>
-                                </div>
-                        </div>
-                </div>
+                          <div class="logout">
+                                  <a href=".">
+                                  <button class="logout-button">
+                                          Logout
+                                  </button>
+                                  </a>
+                          </div>
 
-                <div class="drag-area">
-                        <!--Preview Photo area-->
-                        <div class="drag-area-photo">
-                                <header id="dragText">Select Photo to Upload</header>
-                                <span></span>
-                                <button id="photoUpload">Browse Photo</button>
-                                <input id="photoInput" type="file" hidden>
-                        </div>
 
-                        
+                          <div class="rosen">
+                                  <a href=index>
+                                  <img src="{{url_for('static', filename='images/2880px-Logo_ROSEN_Group_White.png')}}" id="logo" width="220px" height="63px">
+                                  </a>
+                          </div>
+                  </div>
+          </div>
 
-                        <!--Preview Video area-->
-                        <div class="drag-area-video">
-                                <header id="videoDragText">Select Video to Upload</header>
-                                <span id="videoSpacing"></span>
-                                <button id="videoUpload">Browse Video</button>
-                                <input id="videoInput" type="file" hidden>
-                                <video id="video" width="300" height="300" controls></video>
-                                
-                        </div>
-                </div>
+          <!-- <div class="drag-area">
+                  <div class="drag-area-photo">
+                          <header id="dragText">Select Photo to Upload</header>
+                          <span></span>
+                          <button id="photoUpload">Browse Photo</button>
+                          <input id="photoInput" type="file" hidden>
+                  </div>
 
-                <!--Run button-->
-                <div class="run">
-                        <!--a href to redirect page to image.html-->
-                        <a href=image>
-                                <button class="run-button">
-                                        <b>Run</b>
-                                </button>
-                        </a>
-                </div>
+                  
 
-                <!--Footer div-->
-                <div>
-                        <footer>
-                                <div class="footer-text">
-                                        ROSEN Team A
-                                    </div>
-                        </footer>
-                </div>
+                  <div class="drag-area-video">
+                          <header id="videoDragText">Select Video to Upload</header>
+                          <span id="videoSpacing"></span>
+                          <button id="videoUpload">Browse Video</button>
+                          <input id="videoInput" type="file" hidden>
+                          <video id="video" width="300" height="300" controls></video>
+                          
+                  </div>
+          </div> -->
+          <div>
+                  <h1>File Upload</h1>
+                  <form method="POST" action="" enctype="multipart/form-data">
+                  <p><input type="file" name="file"></p>
+                  <p><input type="submit" value="Submit"></p>
+                  </form>
+                  <hr>
+  
 
-                <script src="../static/javascript/indexPage.js"></script>
-                
-      </body>
+          <div class="drag-area">
+            <div class="drag-area-photo">
+              <header id="dragText">Photo Preview</header>
+              <div class="drag-area-photo">
+                {% for file in files %}
+                <img src="{{ url_for('upload', filename=file) }}" style="width: 100%">
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+                  
+                  
+                  <!--<div class="drag-area-video">
+                          <header id="videoDragText">Select Video to Upload</header>
+                          <span id="videoSpacing"></span>
+                          <button id="videoUpload">Browse Video</button>
+                          <input id="videoInput" type="file" hidden>
+                          <video id="video" width="300" height="300" controls></video>
+                          
+                  </div>-->
+          </div> 
+          <!--Run button-->
+          <div class="run">
+                  <!--a href to redirect page to image.html-->
+                  <a href=image>
+                          <button class="run-button">
+                                  <b>Run</b>
+                          </button>
+                  </a>
+          </div>
+
+          <!--Footer div-->
+          <div>
+                  <footer>
+                          <div class="footer-text">
+                                  ROSEN Team A
+                              </div>
+                  </footer>
+          </div>
+
+          <script src="../static/javascript/indexPage.js"></script>
+          
+</body>
 </html>
