--- a/Website/static/styles/index-style.css
+++ b/Website/static/styles/index-style.css
@@ -24,7 +24,7 @@ body{
 .drag-area-photo{
         border: 2px dashed rgb(54, 85, 120);
         height: 350px;
-        width: 350px;
+        width: 450px;
         border-radius: 5px;
         display: flex;
         align-items: center;
@@ -230,4 +230,54 @@ footer{
     font-family: Arial;
     font-size: 12px;
     font-weight: normal;
+}
+
+.upload-area {
+    position: relative;
+    margin-top: 105px;
+}
+
+.upload-image-title {
+    position: relative;
+    margin-top: 30px;
+    text-align: center;
+}
+
+.upload-buttons {
+    color: rgb(60, 80, 100);
+    position: relative;
+    max-width: 100%;
+}
+
+::-webkit-file-upload-button {
+    background-color: rgb(54, 85, 120);
+    color: white;
+    margin-left: 70px;
+    border: none;
+    border-radius: 6px;
+    width: 100px;
+    height: 30px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+::-webkit-file-upload-button:hover {
+    background-color: rgb(60, 80, 100);
+}
+
+.submit {
+    background-color: rgb(54, 85, 120);
+    color: white;
+    margin-left: 70px;
+    border: none;
+    border-radius: 6px;
+    width: 72px;
+    height: 30px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.submit:hover {
+    background-color: rgb(60, 80, 100);
 }
