--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-          <title>Home</title>
-          <link rel="stylesheet" href="{{ url_for('static',filename='styles/index-style.css') }}">
-          
+        <title>Home</title>
+        <link rel="stylesheet" href="{{ url_for('static',filename='styles/index-style.css') }}">
+    
 </head>
 
 <body>
@@ -33,13 +33,13 @@
         </div>
 
 
-          
+        <!-- Image Upload -->
         <div class="upload-area">
                 <div class="upload-buttons">
                         <h1 class="upload-image-title">Upload Image</h1>
                         <form method="POST" action="" enctype="multipart/form-data">
-                        <p><label for="file" class="file-label"><input type="file" name="file" class="file"></label></p>
-                        <input type="submit" value="Upload" class="submit">
+                                <p><label for="file" class="file-label"><input type="file" name="file" class="file"></label></p>
+                                <p><input type="submit" value="Upload" class="submit"></p>
                         </form>
                         <hr>
                 </div>
@@ -55,16 +55,6 @@
                                 </div>
                         </div>
                 </div>
-                  
-                  
-                  <!--<div class="drag-area-video">
-                          <header id="videoDragText">Select Video to Upload</header>
-                          <span id="videoSpacing"></span>
-                          <button id="videoUpload">Browse Video</button>
-                          <input id="videoInput" type="file" hidden>
-                          <video id="video" width="300" height="300" controls></video>
-                          
-                  </div>-->
         </div>
 
 
@@ -73,10 +63,11 @@
                 <!--a href to redirect page to image.html-->
                 <a href=image>
                         <button class="run-button">
-                                <b>Run</b>
+                                <b>Next</b>
                         </button>
                 </a>
         </div>
+
 
         <!--Footer div-->
         <div>
