--- a/Website/templates/uploadImage.html
+++ b/Website/templates/uploadImage.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
         <title>Home</title>
+        <script src="../static/javascript/uploadImage.js"></script>
         <link rel="stylesheet" href="{{ url_for('static',filename='styles/index-style.css') }}">
-    
 </head>
 
 <body>
@@ -61,7 +61,7 @@
         <!--Run button-->
         <div class="run">
                 <!--a href to redirect page to image.html-->
-                <a href=image>
+                <a href=uploadVideo>
                         <button class="run-button">
                                 <b>Next</b>
                         </button>
@@ -77,7 +77,6 @@
                         </div>
                 </footer>
         </div>
-          <script src="../static/javascript/uploadImage.js"></script>
 
           
 </body>
