--- a/Website/templates/uploadImage.html
+++ b/Website/templates/uploadImage.html
@@ -36,12 +36,13 @@
         <!-- Image Upload -->
         <div class="upload-area">
                 <div class="upload-buttons">
-                        <h1 class="upload-image-title">Upload Image</h1>
+                        <h1 class="upload-file-title">Upload Image</h1>
                         <form method="POST" action="" enctype="multipart/form-data">
-                                <p><label for="file" class="file-label"><input type="file" name="file" class="file"></label></p>
-                                <p><input type="submit" value="Upload" class="submit"></p>
+                                <p><label for="file" class="file-label">
+                                        <input type="file" name="file" class="file" accept="image/*">
+                                </label>
+                                <input type="submit" value="Upload" class="submit"></p>
                         </form>
-                        <hr>
                 </div>
   
 
