updated some files

--- a/Website/templates/uploadImage.html
+++ b/Website/templates/uploadImage.html
@@ -25,7 +25,7 @@
 
 
                         <div class="rosen">
-                                <a href=index>
+                                <a href=uploadImage>
                                         <img src="{{url_for('static', filename='images/2880px-Logo_ROSEN_Group_White.png')}}" id="logo" width="220px" height="63px">
                                 </a>
                         </div>
