--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -159,7 +159,7 @@
             <div class="toolbar-rerun">
                 <div class="rerun">
                     <!--a href to redirect page to rerun.html-->
-                    <a href="result">
+                    <a href=image>
                         <button class="rerun-button">
                             <b>Rerun</b>
                         </button>
