--- a/Website/templates/result.html
+++ b/Website/templates/result.html
@@ -21,7 +21,7 @@
 
                         <div class="homepage">
                         <!--a href to redirect page to index.html-->
-                        <a href=uploadImage>
+                        <a href=index>
                                 <button class="homepage-button" id="homepage-button">
                                 <img src="{{url_for('static', filename='images/home-button-white.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/home-button-white-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/home-button-white.svg')}}'" width="50px" height="50px">
                                 </button>
@@ -31,7 +31,7 @@
 
 
                         <div class="rosen-logo">
-                        <a href=uploadImage>
+                        <a href=index>
                                 <img src="{{url_for('static', filename='images/2880px-Logo_ROSEN_Group_White.png')}}" id="logo" width="220px" height="63px">
                         </a>
                         </div>
