--- a/Website/templates/uploadVideo.html
+++ b/Website/templates/uploadVideo.html
@@ -25,7 +25,7 @@
 
 
                                 <div class="rosen">
-                                        <a href=uploadImage>
+                                        <a href=index>
                                         <img src="{{url_for('static', filename='images/2880px-Logo_ROSEN_Group_White.png')}}" id="logo" width="220px" height="63px">
                                         </a>
                                 </div>
@@ -33,24 +33,15 @@
                 </div>
 
 
-                <div class="video-upload">
-                                <form method="POST" action="" enctype="multipart/form-data">
-                                        <input type="file" class=" file" name="file" accept="video/*"/>
-                                        <video autoplay id="video" controls width="800" height="600"></video>
-                                        <input class="submit" type="submit" value="Submit">
-                                </form>
+                <div>
+                        <h1>File Upload</h1>
+                        <form method="POST" action="" enctype="multipart/form-data">
+                        <p><input type="file" class=" file_multi_video" name="file" accept="video/*"/></p>
+                        <video autoplay id="video" controls width="800" height="600">
+                        </video>
+                        <p><input class="run-button" type="submit" value="Submit"></p>
+                        </form>
                 </div>
-
-                <!--Run button-->
-                <div class="run">
-                        <!--a href to redirect page to image.html-->
-                        <a href=result>
-                                <button class="run-button">
-                                        <b>Next</b>
-                                </button>
-                        </a>
-                </div>
-
 
 
                 
