modified deepimagesearch, server.py

--- a/Website/templates/loading.html
+++ b/Website/templates/loading.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "2; url = http://127.0.0.1:5000/result" />
+      <meta http-equiv = "refresh" content = "2; url = http://127.0.0.1:5000/search" />
    </head>
    <body>
       <p>Loading...</p>
