--- a/Website/templates/uploadVideo.html
+++ b/Website/templates/uploadVideo.html
@@ -54,7 +54,7 @@
                 <!--Run button-->
                 <div class="run">
                         <!--a href to redirect page to image.html-->
-                        <a href=uploadVideo>
+                        <a href=loading>
                                 <button class="run-button">
                                         <b>Next</b>
                                 </button>
