--- a/Website/templates/choppedImages.html
+++ b/Website/templates/choppedImages.html
@@ -176,3 +176,173 @@
                         -->
             
                         </div>
+                        <div class="image-box image-box17">
+                            <img class="image image7" src="{{url_for('static', filename='images/fish.png')}}" id="image17" width="240px" height="240px">
+                        <!-- <button class="enlarge-button">
+                            <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
+                        </button>
+                    -->
+                        
+                    </div>
+        
+                    <div class="image-box image-box18">
+                            <img class="image image8" src="{{url_for('static', filename='images/fish.png')}}" id="image18" width="240px" height="240px">
+                        <!-- <button class="enlarge-button">
+                            <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
+                        </button>
+                    -->
+                    </div>
+        
+                    <div class="image-box image-box19">
+                            <img class="image image9" src="{{url_for('static', filename='images/fish.png')}}" id="image19" width="240px" height="240px">
+                        <!-- <button class="enlarge-button">
+                            <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
+                        </button>
+                    -->
+        
+                    </div>
+        
+                    <div class="image-box image-box20">
+                            <img class="image image10" src="{{url_for('static', filename='images/fish.png')}}" id="image20" width="240px" height="240px">
+                        <!-- <button class="enlarge-button">
+                            <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
+                        </button>
+                    -->
+                    </div>
+
+
+                    <div class="image-box image-box21">
+                            <img class="image image1" src="{{url_for('static', filename='images/fish.png')}}" id="image21" width="240px" height="240px">
+                        <!-- <button class="enlarge-button">
+                            <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
+                        </button>
+                    -->
+                    </div>
+        
+                    <div class="image-box image-box22">
+                            <img class="image image2" src="{{url_for('static', filename='images/fish.png')}}" id="image22" width="240px" height="240px">
+                        <!-- <button class="enlarge-button">
+                            <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
+                        </button>
+                    -->
+                    </div>
+        
+                    <div class="image-box image-box23">
+                            <img class="image image3" src="{{url_for('static', filename='images/fish.png')}}" id="image23" width="240px" height="240px">
+                        <!-- <button class="enlarge-button">
+                            <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
+                        </button>
+                    -->
+                    </div>
+        
+                    <div class="image-box image-box24">
+                            <img class="image image4" src="{{url_for('static', filename='images/fish.png')}}" id="image24" width="240px" height="240px">
+                        <!-- <button class="enlarge-button">
+                            <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
+                        </button>
+                    -->
+                    </div>
+        
+                    <div class="image-box image-box25">
+                            <img class="image image5" src="{{url_for('static', filename='images/fish.png')}}" id="image25" width="240px" height="240px">
+                        <!-- <button class="enlarge-button">
+                            <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
+                        </button>
+                    -->
+                    </div>
+        
+        
+                    <div class="image-box image-box26">
+                            <img class="image image6" src="{{url_for('static', filename='images/fish.png')}}" id="image26" width="240px" height="240px">
+                        <!-- <button class="enlarge-button">
+                            <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
+                        </button>
+                    -->
+        
+                    </div>
+        
+                    <div class="image-box image-box27">
+                            <img class="image image7" src="{{url_for('static', filename='images/fish.png')}}" id="image27" width="240px" height="240px">
+                        <!-- <button class="enlarge-button">
+                            <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
+                        </button>
+                    -->
+                        
+                    </div>
+        
+                    <div class="image-box image-box28">
+                            <img class="image image8" src="{{url_for('static', filename='images/fish.png')}}" id="image28" width="240px" height="240px">
+                        <!-- <button class="enlarge-button">
+                            <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
+                        </button>
+                    -->
+                    </div>
+        
+                    <div class="image-box image-box29">
+                            <img class="image image9" src="{{url_for('static', filename='images/fish.png')}}" id="image29" width="240px" height="240px">
+                        <!-- <button class="enlarge-button">
+                            <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
+                        </button>
+                    -->
+        
+                    </div>
+        
+                    <div class="image-box image-box30">
+                            <img class="image image10" src="{{url_for('static', filename='images/fish.png')}}" id="image30" width="240px" height="240px">
+                        <!-- <button class="enlarge-button">
+                            <img src="{{url_for('static', filename='images/enlarge-button.svg')}}" class="enlarge-image" onmouseover="this.src='{{url_for('static', filename='images/enlarge-button-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/enlarge-button.svg')}}'" width="40px" height="40px">
+                        </button>
+                    -->
+                    </div>
+        
+                </div>
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+
+
+
+<!-- insert modal code here -->
+
+
+    <div>
+        <div class="toolbar-rerun">
+            <div class="rerun">
+                    <a href=image>
+                            <button class="training-button">
+                                <b>Back to Training</b>
+                            </button>
+                        </a>
+                    <!--a href to redirect page to rerun.html-->
+                    <a href=image>
+                            <button class="download-button">
+                            <b>Download</b>
+                            </button>
+                    </a>
+            </div>
+        </div>
+
+
+        <!--Footer div-->
+    <div>
+            <footer class="image-footer">
+                    <div class="footer-text">
+                            ROSEN Team A
+                    </div>
+            </footer>
+    </div>
+
+    </div>
+
+</body>
+
+</html>
