--- a/Website/templates/search.html
+++ b/Website/templates/search.html
@@ -3,8 +3,11 @@
    <head>
       <title>HTML Meta Tag</title>
       <meta http-equiv = "refresh" content = "2; url = http://127.0.0.1:5000/result" />
+      <link rel="stylesheet" href="{{ url_for('static', filename='styles/loading-style.css') }}">
    </head>
    <body>
-      <p>Searching...</p>
+                <h2 class="center">Searching...</h2>
+                <div class="loader"></div>
+     
    </body>
 </html>
