Fixed run button in uploadVideo page

--- a/Website/templates/uploadVideo.html
+++ b/Website/templates/uploadVideo.html
@@ -53,12 +53,10 @@
 
                 <!--Run button-->
                 <div class="run">
-                        <!--a href to redirect page to image.html-->
-                        <a href=loading>
-                                <button class="run-button">
-                                        <b>Next</b>
-                                </button>
-                        </a>
+                        <!--onclick location.href to redirect page to loading-->
+                        <button class="run-button" id="run-button" onclick="location.href='loading'">
+                                <b>Next</b>
+                        </button>
                 </div>
 
 
