--- a/Website/templates/uploadImage.html
+++ b/Website/templates/uploadImage.html
@@ -36,7 +36,15 @@
         <!-- Image Upload -->
         <div class="upload-area">
                 <div class="upload-buttons">
-                        <h1 class="upload-file-title">Upload Image</h1>
+                        <h1 class="upload-file-title">Upload Image 
+                            <span class = "tooltip"><img src="{{url_for('static', filename='images/tooltip_icon.png')}}" width="20px" height="20px">
+                                <span class="tooltiptext">1. Click 'Choose File' and select the image to upload; &nbsp;
+                                                        2. Click 'Upload' to upload the image; &nbsp;
+                                                        3. Click 'Next' to proceed;
+                                </span>
+                            </span>
+                        </h1>                            
+
                         <form method="POST" action="" enctype="multipart/form-data">
                                 <p><label for="file" class="file-label">
                                         <input type="file" name="file" class="file" accept="image/*">
