--- a/Website/templates/uploadVideo.html
+++ b/Website/templates/uploadVideo.html
@@ -36,7 +36,14 @@
                  <!-- Image Upload -->
                 <div class="upload-area">
                         <div class="upload-buttons">
-                                <h1 class="upload-file-title">Upload Video</h1>
+                                <h1 class="upload-file-title"> Upload Video
+                                    <span class = "tooltip"><img src="{{url_for('static', filename='images/tooltip_icon.png')}}" width="20px" height="20px">
+                                        <span class="tooltiptext">1. Click 'Choose File' and select the video to upload; &nbsp;
+                                                                2. Click 'Upload' to upload the video; &nbsp;
+                                                                3. Click 'Next' to proceed;
+                                        </span>
+                                    </span>
+                                </h1>
                                 <form method="POST" action="" enctype="multipart/form-data">
                                         <p><label for="file" class="file-label">
                                                 <input type="file" class=" file_multi_video" name="file" accept="video/*"/>
