progress bar implementation

--- a/Website/templates/result.html
+++ b/Website/templates/result.html
@@ -21,7 +21,7 @@
 
                         <div class="homepage">
                         <!--a href to redirect page to index.html-->
-                        <a href=index>
+                        <a href=uploadImage>
                                 <button class="homepage-button" id="homepage-button">
                                 <img src="{{url_for('static', filename='images/home-button-white.svg')}}" onmouseover="this.src='{{url_for('static', filename='images/home-button-white-dark.svg')}}'" onmouseout="this.src='{{url_for('static', filename='images/home-button-white.svg')}}'" width="50px" height="50px">
                                 </button>
