--- a/Website/templates/search.html
+++ b/Website/templates/search.html
@@ -8,6 +8,17 @@
    <body>
                 <h2 class="center">Searching...</h2>
                 <div class="loader"></div>
+
+                <!-- Progress Bar -->
+        <nav class="navmenu">
+                <ul>
+                       <li>Upload Image</li>
+                       <li>Upload Video</li>
+                       <li>Chopping Frames</li>
+                       <li class="active">Image Searching</li>
+                       <li>Result</li>
+               </ul>
+       </nav>
      
    </body>
 </html>
