--- a/Website/templates/uploadImage.html
+++ b/Website/templates/uploadImage.html
@@ -25,7 +25,7 @@
 
 
                         <div class="rosen">
-                                <a href=index>
+                                <a href=uploadImage>
                                         <img src="{{url_for('static', filename='images/2880px-Logo_ROSEN_Group_White.png')}}" id="logo" width="220px" height="63px">
                                 </a>
                         </div>
@@ -58,6 +58,17 @@
                 </div>
         </div>
 
+
+        <!-- Progress Bar -->
+        <nav class="navmenu">
+                 <ul>
+                        <li class="active">Upload Image</li>
+                        <li>Upload Video</li>
+                        <li>Chopping Frames</li>
+                        <li>Image Searching</li>
+                        <li>Result</li>
+                </ul>
+        </nav>
 
         <!--Run button-->
         <div class="run">
