--- a/Website/static/styles/global-style.css
+++ b/Website/static/styles/global-style.css
@@ -463,3 +463,68 @@ input:-webkit-autofill::first-line {
     display: none;
     color: rgb(54, 85, 120);
 }
+
+
+
+
+ul {
+        list-style: none;
+}
+
+.navmenu {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+}
+
+.navmenu ul{
+        padding-left: 50px;
+        position: relative;
+}
+
+.navmenu ul::after {
+        content: "";
+        position: absolute;
+        width: 3px;
+        height: calc(100% - 58px);
+        left: 40px;
+        top: 0;
+        background-color: rgb(54, 85, 120);;
+        z-index: -1;
+        margin-top: 29px;
+}
+
+
+.navmenu ul li {
+        padding: 30px 0;
+        padding-left: 20px;
+        text-decoration: none;
+        position: relative;
+        background-color: #fff;
+        font-size: 22px;
+        line-height: 1rem;
+        font-weight: 500;
+}
+
+.navmenu ul li::before {
+        content: "";
+        position: absolute;
+        background: #fff;
+        width: 18px;
+        height: 18px;
+        left: -22px;
+        top: 50%;
+        transform: translateY(-50%);
+        border-radius: 50px;
+        border: 4px solid rgb(54, 85, 120);
+        transition: background 250ms;
+}
+
+.navmenu ul li.active {
+        font-weight: 700;
+}
+
+.navmenu ul li.active::before {
+        background: rgb(54, 85, 120);
+}
