--- a/Website/templates/loading.html
+++ b/Website/templates/loading.html
@@ -8,6 +8,17 @@
    <body>
                 <h2 class="center">Loading...</h2>
                 <div class="loader"></div>
+
+                <!-- Progress Bar -->
+                <nav class="navmenu">
+                        <ul>
+                                <li>Upload Image</li>
+                                <li>Upload Video</li>
+                                <li class="active">Chopping Frames</li>
+                                <li>Image Searching</li>
+                                <li>Result</li>
+                        </ul>
+                </nav>
      
    </body>
 </html>
