Working on disabling button

--- a/Website/templates/uploadVideo.html
+++ b/Website/templates/uploadVideo.html
@@ -57,6 +57,15 @@
                         <button class="run-button" id="run-button" onclick="location.href='loading'">
                                 <b>Next</b>
                         </button>
+                        <!-- {% if check %}
+                        <button class="run-button" id="run-button" onclick=onclick="location.href='loading'">
+                                <b>Next</b>
+                        </button>
+                        {% else %}
+                        <button class="run-button" id="run-button" onclick=onclick="location.href='loading'" disabled>
+                                <b>Next</b>
+                        </button>
+                        {% endif %} -->
                 </div>
 
 
