--- a/Website/static/styles/index-style.css
+++ b/Website/static/styles/index-style.css
@@ -223,6 +223,15 @@ body {
     background-color: rgb(60, 80, 100);
 }
 
+.run-button:disabled {
+    background-color: rgb(79, 106, 137);
+    cursor: not-allowed;
+}
+
+.run-button:disabled:hover {
+    background-color: rgb(79, 106, 137);
+}
+
 footer{
     position: absolute;
     bottom: 0;
