--- a/Website/templates/fun.html
+++ b/Website/templates/fun.html
@@ -15,3 +15,44 @@
                     </a>
                 </div>
             </div>
+        </div>
+
+        <!-- Input Form-->
+        <div class="input-form-container">
+            
+            <div class="login-title">
+                <b>Login<b>
+            </div>
+
+            <form class="input-form" action="" method="POST">
+                <label for="username"><b>Username</b></label>
+                <br>
+                <input class="text-box" type="text" placeholder="Enter Username" name="username" required {{
+                    request.form.username }}
+                >
+                <br><br>
+
+                <label for="password"><b>Password</b></label>
+                <br>
+                <input class="text-box" type="password" placeholder="Enter Password" name="password" required {{
+                    request.form.password }}
+                >
+                <br><br><br>
+        
+                <a href=index>
+                    <button type="submit" class="login-button"><b>Login<b></button>
+                </a>
+                <label>
+            </form>
+        </div>
+        
+        <!--Footer div-->
+        <div>
+                <footer class='login-footer'>
+                    <div class="footer-text">
+                        ROSEN Team A
+                    </div>
+                </footer>
+        </div>
+      </body>
+</html>
