Disabling of button and preview text working in image upload page

--- a/Website/templates/uploadImage.html
+++ b/Website/templates/uploadImage.html
@@ -82,7 +82,7 @@
         <!--Run button-->
         <div class="run">
                 <!--onclick location.href to redirect page to uploadVideo-->
-                <button class="run-button" id="run-button" onclick="location.href='uploadVideo'">
+                <button class="run-button" id="run-button" onclick="location.href='uploadVideo'" disabled>
                         <b>Next</b>
                 </button>
                 <!-- {% if check %}
