Added code for disabling button on video page (commented out)

--- a/Website/templates/uploadVideo.html
+++ b/Website/templates/uploadVideo.html
@@ -33,7 +33,7 @@
                 </div>
 
 
-                 <!-- Image Upload -->
+                 <!-- Video Upload -->
                 <div class="upload-area">
                         <div class="upload-buttons">
                                 <h1 class="upload-file-title"> Upload Video
@@ -52,8 +52,16 @@
                                 </form>
                         </div>
 
-                        <video autoplay id="video" controls width="800" height="450">
-                        </video>
+                        <!-- <div class="drag-area">
+                                <div class="drag-area-video">
+                                        <header id="dragText">Video Preview</header> -->
+                                        <video autoplay id="video" controls width="800" height="450"> <!-- delete when using commented out code -->
+                                        <!-- {% for file in files %} -->
+                                        <!-- <video src="{{ url_for('upload_video', filename=file) }}" autoplay id="video" controls width="800" height="450">   add disabled when preview is working -->
+                                        <!-- </video> -->
+                                        <!-- {% endfor %} -->
+                                <!-- </div>
+                        </div> -->
                 </div>
 
                 <!-- Progress Bar -->
@@ -70,18 +78,9 @@
                 <!--Run button-->
                 <div class="run">
                         <!--onclick location.href to redirect page to loading-->
-                        <button class="run-button" id="run-button" onclick="location.href='loading'">
+                        <button class="run-button" id="run-button" onclick="location.href='loading'"> <!--  disabled>   add when using commented out code for video (above) and in javascript (onload function) -->
                                 <b>Next</b>
                         </button>
-                        <!-- {% if check %}
-                        <button class="run-button" id="run-button" onclick=onclick="location.href='loading'">
-                                <b>Next</b>
-                        </button>
-                        {% else %}
-                        <button class="run-button" id="run-button" onclick=onclick="location.href='loading'" disabled>
-                                <b>Next</b>
-                        </button>
-                        {% endif %} -->
                 </div>
 
 
