--- a/Website/static/styles/index-style.css
+++ b/Website/static/styles/index-style.css
@@ -81,14 +81,14 @@ body {
 
 .drag-area-video {
     border: 2px dashed rgb(54, 85, 120);
-    height: 500px;
-    width: 700px;
+    height: 450px;
+    width: 800px;
     border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin: 10px;
+    /* margin: 10px; */
     background-color: #abc2db;
 }
 
