--- a/Website/templates/loading.html
+++ b/Website/templates/loading.html
@@ -17,6 +17,7 @@
                                 <li>Upload Image</li>
                                 <li>Upload Video</li>
                                 <li class="active">Chopping Frames</li>
+                                <li>Count Specification</li>
                                 <li>Image Searching</li>
                                 <li>Result</li>
                         </ul>
