--- a/Website/templates/search.html
+++ b/Website/templates/search.html
@@ -15,6 +15,7 @@
                        <li>Upload Image</li>
                        <li>Upload Video</li>
                        <li>Chopping Frames</li>
+                       <li>Count Specification</li>
                        <li class="active">Image Searching</li>
                        <li>Result</li>
                </ul>
