--- a/Website/templates/uploadImage.html
+++ b/Website/templates/uploadImage.html
@@ -74,6 +74,7 @@
                         <li class="active">Upload Image</li>
                         <li>Upload Video</li>
                         <li>Chopping Frames</li>
+                        <li>Count Specification</li>
                         <li>Image Searching</li>
                         <li>Result</li>
                 </ul>
