--- a/Website/templates/uploadVideo.html
+++ b/Website/templates/uploadVideo.html
@@ -62,6 +62,7 @@
                                 <li>Upload Image</li>
                                 <li class="active">Upload Video</li>
                                 <li>Chopping Frames</li>
+                                <li>Count Specification</li>
                                 <li>Image Searching</li>
                                 <li>Result</li>
                         </ul>
