--- a/Website/templates/result.html
+++ b/Website/templates/result.html
@@ -4,6 +4,7 @@
 
     <head>
         <title>Result</title>
+        <!-- <meta http-equiv = "refresh" content = "2; url = http://127.0.0.1:5000/result" /> -->
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/result-style.css') }}">
         <!-- <script src="{{url_for('static', filename='javascript/image.js')}}"></script>   -->
     </head>
