--- a/Website/templates/search.html
+++ b/Website/templates/search.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "2; url = http://127.0.0.1:5000/result" />
+      <title>Searching...</title>
+      <meta http-equiv = "refresh" content = "2; url = http://127.0.0.1:5000/search" />
       <link rel="stylesheet" href="{{ url_for('static', filename='styles/loading-style.css') }}">
    </head>
                 <h2 class="center">Searching for similar images...</h2>
