--- a/Website/templates/loading.html
+++ b/Website/templates/loading.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "2; url = http://127.0.0.1:5000/search" />
+      <title>Chopping Frames</title>
+      <meta http-equiv = "refresh" content = "2; url = http://127.0.0.1:5000/frameCount" />
       <link rel="stylesheet" href="{{ url_for('static', filename='styles/loading-style.css') }}">
    </head>
    <body>
