Created result.js and added preview function (currently disabled)

--- a/Website/templates/loading.html
+++ b/Website/templates/loading.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
+      <title>Extracting Frames</title>
       <meta http-equiv = "refresh" content = "2; url = http://127.0.0.1:5000/search" />
       <link rel="stylesheet" href="{{ url_for('static', filename='styles/loading-style.css') }}">
    </head>
@@ -16,7 +16,7 @@
                         <ul>
                                 <li>Upload Image</li>
                                 <li>Upload Video</li>
-                                <li class="active">Chopping Frames</li>
+                                <li class="active">Extracting Frames</li>
                                 <li>Image Searching</li>
                                 <li>Result</li>
                         </ul>
