--- a/Website/templates/result.html
+++ b/Website/templates/result.html
@@ -6,6 +6,8 @@
         <title>Result</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/result-style.css') }}">
         <!-- <script src="{{url_for('static', filename='javascript/image.js')}}"></script>   -->
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+        <script src="../static/javascript/result.js"></script> -->
     </head>
 
     <body>
@@ -14,7 +16,7 @@
                 <div class="top-elements">
 
                         <div class="title-label">
-                        <b>Results<b>
+                        <b>Result<b>
                         </div>
 
 
