--- a/Website/templates/search.html
+++ b/Website/templates/search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
+      <title>Image Searching</title>
       <meta http-equiv = "refresh" content = "2; url = http://127.0.0.1:5000/result" />
       <link rel="stylesheet" href="{{ url_for('static', filename='styles/loading-style.css') }}">
    </head>
@@ -14,7 +14,7 @@
                 <ul>
                        <li>Upload Image</li>
                        <li>Upload Video</li>
-                       <li>Chopping Frames</li>
+                       <li>Extracting Frames</li>
                        <li class="active">Image Searching</li>
                        <li>Result</li>
                </ul>
