--- a/Website/templates/uploadImage.html
+++ b/Website/templates/uploadImage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <title>Home</title>
+        <title>Upload Image</title>
         <script src="../static/javascript/uploadImage.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
         <link rel="stylesheet" href="{{ url_for('static',filename='styles/index-style.css') }}">
@@ -71,7 +71,7 @@
                  <ul>
                         <li class="active">Upload Image</li>
                         <li>Upload Video</li>
-                        <li>Chopping Frames</li>
+                        <li>Extracting Frames</li>
                         <li>Image Searching</li>
                         <li>Result</li>
                 </ul>
