--- a/Website/templates/uploadVideo.html
+++ b/Website/templates/uploadVideo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
       <html lang="en">
       <head>
-                <title>Home</title>
+                <title>Upload Video</title>
                 <link rel="stylesheet" href="{{ url_for('static',filename='styles/index-style.css') }}">
                 
       </head>
@@ -68,7 +68,7 @@
                         <ul>
                                 <li>Upload Image</li>
                                 <li class="active">Upload Video</li>
-                                <li>Chopping Frames</li>
+                                <li>Extracting Frames</li>
                                 <li>Image Searching</li>
                                 <li>Result</li>
                         </ul>
