--- a/Website/static/styles/index-style.css
+++ b/Website/static/styles/index-style.css
@@ -295,7 +295,8 @@ footer{
   
     /* Position the tooltip */
     position: absolute;
-    bottom: 10px;
+    bottom: -12px;
+    right: -52px;
     z-index: 1;
   }
   
