commented out download button

--- a/Website/templates/result.html
+++ b/Website/templates/result.html
@@ -72,6 +72,11 @@
 
                         <!-- the download link is invalid as for now -->
 
+                        <!-- <a href = "../similar_images.zip" download>
+                                <button class="download-button" >
+                                <b>Download</b>
+                                </button>
+                        </a> -->
                 </div>
             </div>
 
